# ConformalAMR

./: README.md  pyproject.toml
conformal_amr/: __init__.py
conformal_amr/classifier_models/: classifier.py  data_loaders.py  data_utils.py  modules.py  mole_bert.py  utils.py
conformal_amr/conformal_models/: conformal_models.py
conformal_amr/data_splits/: data_utils.py  mole_bert_loaders.py
conformal_amr/experiments/: pl_experiment.py
data/: DRIAMS_Mole-BERT_drug_embeddings.csv  drug_fingerprints.csv
notebooks/: Antibiotic_graphs.ipynb  Conformal_Analysis.ipynb  Multimodal_AMR_performance.ipynb  Process_DRIAMS_data.ipynb  notebook_utils.py
scripts/: conformal_eval.py  finetune_ResAMR_classifier.py  train_ResAMR_classifier.py
